{
  "version": 4,
  "terraform_version": "0.13.5",
  "serial": 30,
  "lineage": "5db3d05f-e83f-57fe-daf5-435b12ec63e1",
  "resources": [
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hardway-controller",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-0c8a254d60cf39c64",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0c8a254d60cf39c64",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0f5dc3e4a99dc49ba",
            "private_dns": "ip-100-64-10-165.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.165",
            "public_dns": "ec2-3-35-132-206.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.35.132.206",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-036990c41e3d78f60",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "Controller-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-0d9a3572facb22782",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0d9a3572facb22782",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-082d71f65107aa4ba",
            "private_dns": "ip-100-64-10-183.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.183",
            "public_dns": "ec2-54-180-156-223.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "54.180.156.223",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0cb7ee21df6250a8f",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "Controller-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-050720d610a5a95ae",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-050720d610a5a95ae",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0e0ca2cfb42f08895",
            "private_dns": "ip-100-64-10-202.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.202",
            "public_dns": "ec2-52-78-4-181.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.4.181",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0d51137e1435532bb",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "Controller-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hardway-haproxy",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-0cfea3180407f7277",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0cfea3180407f7277",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-075ed513afc08cc80",
            "private_dns": "ip-100-64-10-187.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.187",
            "public_dns": "ec2-52-78-224-216.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "52.78.224.216",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0131b194c83b869ae",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "haproxy"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hardway-management",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-00ae27de81b681de2",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-00ae27de81b681de2",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-06898691e88b1a6f2",
            "private_dns": "ip-100-64-10-85.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.85",
            "public_dns": "ec2-3-34-143-32.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.34.143.32",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-02c4e835cd16aace7",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "management"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_instance",
      "name": "hardway-worker",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-06eb6ae998fd85f3d",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06eb6ae998fd85f3d",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0247463edfc31e400",
            "private_dns": "ip-100-64-10-97.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.97",
            "public_dns": "ec2-3-36-97-30.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.97.30",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0be41afc4fac21a54",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "Worker-0"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-0f25d18ef5a6acc5f",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0f25d18ef5a6acc5f",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0ef4e6fad018dfa44",
            "private_dns": "ip-100-64-10-12.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.12",
            "public_dns": "ec2-3-36-99-151.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "3.36.99.151",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0960a3b903928a513",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "Worker-1"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-03461b78fdba0ff9d",
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:instance/i-0ce5e8d2e7caf8247",
            "associate_public_ip_address": true,
            "availability_zone": "ap-northeast-2a",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 2,
            "credit_specification": [
              {
                "cpu_credits": "unlimited"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0ce5e8d2e7caf8247",
            "instance_state": "running",
            "instance_type": "t3.small",
            "ipv6_address_count": 0,
            "key_name": "test123",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-0be76ed0844bd9977",
            "private_dns": "ip-100-64-10-105.ap-northeast-2.compute.internal",
            "private_ip": "100.64.10.105",
            "public_dns": "ec2-13-125-191-51.ap-northeast-2.compute.amazonaws.com",
            "public_ip": "13.125.191.51",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0613308807afff370",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-07af3969a886d7663",
            "tags": {
              "Name": "Worker-2"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-048767b4026ad24a9"
            ]
          },
          "dependencies": [
            "module.ec2.aws_security_group.web_service",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.ec2",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:security-group/sg-048767b4026ad24a9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-048767b4026ad24a9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "100.64.0.0/16"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "terraform test",
            "name_prefix": "",
            "owner_id": "505182752557",
            "revoke_rules_on_delete": false,
            "tags": null,
            "timeouts": null,
            "vpc_id": "vpc-0e90c6d54530ce967"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:internet-gateway/igw-0aab94dff598d3687",
            "id": "igw-0aab94dff598d3687",
            "owner_id": "505182752557",
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e90c6d54530ce967"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "default-route",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0aab94dff598d3687",
            "id": "r-rtb-09d84f462f0f2e3491080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": null,
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "module.vpc.aws_internet_gateway.igw",
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "route_table",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-09d84f462f0f2e349",
            "owner_id": "505182752557",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0aab94dff598d3687",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "main"
            },
            "vpc_id": "vpc-0e90c6d54530ce967"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "route_table_association_1",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 4,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 5,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 6,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 7,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 8,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 9,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 10,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 11,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 12,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        },
        {
          "index_key": 13,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0189b4d4e255fad18",
            "route_table_id": "rtb-09d84f462f0f2e349",
            "subnet_id": "subnet-07af3969a886d7663"
          },
          "dependencies": [
            "module.vpc.aws_route_table.route_table",
            "module.vpc.aws_subnet.subnet",
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subnet",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:subnet/subnet-07af3969a886d7663",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-northeast-2a",
            "availability_zone_id": "apne2-az1",
            "cidr_block": "100.64.10.0/24",
            "id": "subnet-07af3969a886d7663",
            "map_public_ip_on_launch": true,
            "owner_id": "505182752557",
            "tags": {
              "Name": "PoC-public-2a",
              "TerraformManaged": "true"
            },
            "vpc_id": "vpc-0e90c6d54530ce967"
          },
          "dependencies": [
            "module.vpc.aws_vpc.main"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "module.vpc.provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-northeast-2:505182752557:vpc/vpc-0e90c6d54530ce967",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "100.64.0.0/16",
            "default_network_acl_id": "acl-0e2d2fca0bd2b5366",
            "default_route_table_id": "rtb-09c9e9d7777913753",
            "default_security_group_id": "sg-0cf0c2452bb1ef737",
            "dhcp_options_id": "dopt-1c74f577",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0e90c6d54530ce967",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09c9e9d7777913753",
            "owner_id": "505182752557",
            "tags": {
              "Name": "Terraform-101"
            }
          }
        }
      ]
    }
  ]
}